test-ingress/flask-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flask-deployment
  namespace: test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: akj49/flask-app:latest
        ports:
        - containerPort: 5000
