test-ingress/flask-service.yml
kind: Service
apiVersion: v1
metadata:
  name: flask-service
  namespace: test-ingress
spec:
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
