test-ingress/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress
  namespace: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: bugtracker-service
            port: 
              number: 8000
      - pathType: Prefix
        path: /flask
        backend:
          service:
            name: flask-service
            port: 
              number: 5000
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
